# skynet-sensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdcc.cmake
inc/: stm8s.h
src/: CMakeLists.txt  jiffies.h  main.c  os.h  os_linux.c  os_stm8s.c  stdio.c  stm8s_it.c  stm8s_it.h  time.c  unittest.cpp  utility.c  utility.h
stm8s-stdperiph/: CMakeLists.txt  stm8s_conf.h
stm8s-stdperiph/inc/: stm8s.h
stm8s-stdperiph/src/: CMakeLists.txt  stm8s_clk.c  stm8s_flash.c  stm8s_gpio.c  stm8s_itc.c  stm8s_tim2.c  stm8s_uart1.c
toolkit/: CMakeLists.txt  main.cpp  mainwin.cpp  mainwin.h  mainwin.ui
